# telegram_attendance_bot_v2

./: .env.example  .gitignore  README.md  docker-compose.yml  pytest.ini
docker/: build.Dockerfile  dev.Dockerfile  unittest.Dockerfile
src/: README.md  main.py  pyproject.toml  requirements.txt  simple_bot.py
src/bots/: README.md  __init__.py  admin_bot.py  bot_core.py  training_bot.py
src/command_handlers/: __init__.py  cancel_handler.py  start_handler.py
src/command_handlers/conversations/: README.md  __init__.py  attendance_conversation.py  conversation_flow.py  get_team_attendance_conversation.py  manage_access_conversation.py  manage_event_conversation.py  messaging_conversation.py  registration_conversation.py
src/config/: settings.py
src/controllers/: attendance_controller.py  manage_access_controller.py  manage_event_controller.py  registration_controller.py  team_attendance_controller.py
src/conversations/: conversation_flow.py
src/custom_components/: CalendarKeyboardMarkup.py
src/localization/: __init__.py  locale_store.py
src/localization/locales/: en.json
src/models/: README.md  __init__.py  enums.py  models.py
src/models/responses/: __init__.py  responses.py
src/providers/: README.md  attendance_provider.py  attendance_provider_impl.py  messaging_provider.py
src/services/: EventService.py  MessagingService.py  README.md  __init__.py  base.py  mock_service.py
src/telegram_handlers/: __init__.py  basic_handlers.py
src/utils/: markup_converter.py
tests/: conftest.py  pytest.ini
tests/models/: test_event.py
(+11 files in other folders)
