# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
packages = {find = {where = ["."]}}
py-modules = ["main"]

[project]
name = "telegram_attendance_bot"
version = "0.1.0"
authors = [
  { name="Lee Ling Zhen", email="leelingzhenn@gmail.com" },
]
description = "Telegram bot to manage attendance"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# This section lists the dependencies
dependencies = [
    "python-telegram-bot==22.5",
    "pydantic==2.12.4",
    "python-dotenv==1.2.1",
    "httpx~=0.28.1",
    "rich>=13.7.0",
    "pretty-errors>=1.2.25",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
]

[project.scripts]
attendance-bot = "main:main"